@@ -1,0 +1,21 @@
+/* XPM */
+static const char * comment_xpm[] = {
+"16 16 2 1",
+" 	c None",
+".	c #009f00",
+"                ",
+"                ",
+"                ",
+"     .    .     ",
+"     .    .     ",
+"     .    .     ",
+"  ............  ",
+"     .    .     ",
+"     .    .     ",
+"     .    .     ",
+"     .    .     ",
+"  ............  ",
+"     .    .     ",
+"     .    .     ",
+"     .    .     ",
+"                "};
